Fikser PdpRequestBuilder som nå får en UUID istedenfor String